文档完善（CMS垃圾收集器模块）、demo注释